# KnowKhayrul

./: .gitignore  README.md  docker-compose.yml  paper.bib  test.ipynb
chatbot_api/: Dockerfile  pyproject.toml  requirements.txt
chatbot_api/src/: entrypoint.sh  generate_vector_store.py  main.py
chatbot_api/src/agents/: chatbot_rag_agent.py  hospital_rag_agent.py
chatbot_api/src/chains/: education_chain.py  git_hub.py  hospital_cypher_chain_bac.py  papers_chain.py  test.py
chatbot_api/src/models/: chatbot_rag_query.py
chatbot_api/src/tools/: papersQA.py
chatbot_frontend/: Dockerfile
chatbot_frontend/src/: entrypoint.sh  main.py
chatbot_neo4j_etl/: pyproject.toml
chatbot_neo4j_etl/src/: entrypoint.sh
data/: courses.csv  education.csv  papers.csv  papers.json  papers_mod.json  skills.csv  skills__.csv
hospital_neo4j_etl/src/: chroma_db.py  education_csv_write.py  entrypoint.sh  hospital_bulk_csv_write.py
tests/: async_agent_requests.py  sync_agent_requests.py
