# chatbot_api/pyproject.toml

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatbot_api"
version = "0.1"
dependencies = [
    "asyncio==3.4.3",
    "fastapi==0.110.0",
    "langchain>=0.2.16",  # Updated to exact version
    "neo4j==5.14.1",
    "numpy==1.26.2",
    "langchain_openai",
    "opentelemetry-api==1.22.0",
    "pydantic==2.5.1",
    "uvicorn==0.25.0",
    "chromadb==0.5.7",  # ChromaDB exact version retained
    "PyPDF2==3.0.1",  # For PDF loading
    "sentence-transformers==2.2.2",  # For embeddings
    "torch==2.0.1",  # For PyTorch (required by sentence-transformers)
    "langchain_community==0.2.17",  # Updated to exact version
    "pypdf==5.0.0",
    "tiktoken==0.7.0",
]

[project.optional-dependencies]
dev = ["black", "flake8"]
